--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
      </div>
      <div class="content">
        <ul>
-         <li><i class="fas fa-house-damage"></i>Home</li>
+         <li  class="border"><i class="fas fa-house-damage"></i>Home</li>
          <li><i class="fas fa-search"></i>Cerca</li>
          <li>La tua libreria</li>
        </ul>
 
        <ul>
          <li class="text-uppercase">playlist</li>
-         <li class="display-inline"><div class="square">+</div><span>Crea Playlist</span></li>
+         <li class="display-inline"><div class="square">+</div><spann class="playlist">Crea Playlist</span></li>
        </ul>
 
        <ul>
@@ -53,26 +53,104 @@
        <li>scopri</li>
      </ul>
 
-    <h2>Recently played</h2>
+    <h2 class="color-white">Recently played</h2>
 
     <div class="raccolta">
-      <div class="card"></div>
-      <span>Hevil Metal</span>
-      <span>Subtitle</span>
-      <div class="card"></div>
-      <span>Hevil Metal</span>
-      <span>Subtitle</span>
-      <div class="card"></div>
-      <span>Hevil Metal</span>
-      <span>Subtitle</span>
-      <div class="card"></div>
-      <div class="card"></div>
+      <div class="card">
+        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <div class="layover">
+          <i class="far fa-play-circle"></i>
+         </div>
+        <h4 class="color-white">Hevil Metal</h4>
+        <p class="color-grey">Subtitle</p>
+      </div>
+
+      <div class="card">
+        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <div class="layover">
+          <i class="far fa-play-circle"></i>
+         </div>
+        <h4 class="color-white">Hevil Metal</h4>
+        <p class="color-grey">Subtitle</p>
+      </div>
+
+      <div class="card">
+        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <div class="layover">
+          <i class="far fa-play-circle"></i>
+        </div>
+
+        <h4 class="color-white">Hevil Metal</h4>
+        <p class="color-grey">Subtitle</p>
+      </div>
+      <div class="card">
+        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <div class="layover">
+          <i class="far fa-play-circle"></i>
+        </div>
+        <h4 class="color-white">Hevil Metal</h4>
+        <p class="color-grey">Subtitle</p>
+      </div>
+      <div class="card">
+        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <div class="layover">
+          <i class="far fa-play-circle"></i>
+        </div>
+        <h4 class="color-white">Hevil Metal</h4>
+        <p class="color-grey">Subtitle</p>
+      </div>
+      <div class="card">
+        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <div class="layover">
+          <i class="far fa-play-circle"></i>
+        </div>
+        <h4 class="color-white">Hevil Metal</h4>
+        <p class="color-grey">Subtitle</p>
+      </div>
     </div>
+
+  <section class="created-for">
+    <h2 class="color-white">Creato per John Doe</h2>
+    <p class="color-grey">Più ascolti, più accurati saranno i suggerimenti.</p>
+  <div class="raccolta">
+    <div class="card">
+      <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+      <h4 class="color-white">Hevil Metal</h4>
+    </div>
+    <div class="card">
+      <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+      <h4 class="color-white">Hevil Metal</h4>
+    </div>
+  </div>
+  </section>
+
+  <section class="created-for">
+    <h2 class="color-white mg-top">Artisti più popolari</h2>
+    <p class="color-grey">Più ascolti, più accurati saranno i suggerimenti.</p>
+  <div class="raccolta">
+    <div class="card">
+      <img class="circle" src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+      <h4 class="color-white">Hevil Metal</h4>
+    </div>
+    <div class="card">
+      <img class="circle" src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+      <h4 class="color-white">Hevil Metal</h4>
+    </div>
+  </div>
+  </section>
 
   </main>
 
   <footer>
-     <div class="footer"></div>
+    <div class="img-cuore">
+      <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+
+      <ul>
+        <li><h6 class="color-white">Sinister</h6></li>
+        <li><h6>Brano Nome</h6></li>
+      </ul>
+    </div>
+
   </footer>
 </body>
 </html>
