parte da completare footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <div class="logo">
        <img src="./assets/img/logo.png" alt="logo-spotify">
      </div>
-     <div class="content">
+    <div class="content">
        <ul>
          <li  class="border"><i class="fas fa-house-damage"></i>Home</li>
          <li><i class="fas fa-search"></i>Cerca</li>
@@ -40,7 +40,18 @@
          <li>Nome Playlist</li>
          <li>Nome Playlist</li>
        </ul>
-     </div>
+    </div>
+
+    <div class="profile">
+       <ul>
+         <li><i class="far fa-arrow-alt-circle-down"> Installa app</i></li>
+       </ul>
+       <hr>
+       <ul class="color-white">
+         <li><i class="fas fa-user-circle"></i> John Doe</li>
+       </ul>
+    </div>
+
   </aside>
 
   <main>
