--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
        <ul>
          <li  class="border"><i class="fas fa-house-damage"></i>Home</li>
          <li><i class="fas fa-search"></i>Cerca</li>
-         <li>La tua libreria</li>
+         <li><svg viewBox="0 0 512 512" width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M291.301 81.778l166.349 373.587-19.301 8.635-166.349-373.587zM64 463.746v-384h21.334v384h-21.334zM192 463.746v-384h21.334v384h-21.334z" fill="currentColor"></path></svg> La tua libreria</li>
        </ul>
 
        <ul>
@@ -31,7 +31,7 @@
          <li class="display-inline"><div class="square">+</div><spann class="playlist">Crea Playlist</span></li>
        </ul>
 
-       <ul>
+       <ul class="categorie">
          <li>Nome Playlist</li>
          <li>Nome Playlist</li>
          <li>Nome Playlist</li>
@@ -67,7 +67,7 @@
     <h2 class="color-white">Recently played</h2>
 
     <div class="raccolta">
-      <div class="card">
+      <div class="card special">
         <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
         <div class="layover">
           <i class="far fa-play-circle"></i>
@@ -153,12 +153,28 @@
   </main>
 
   <footer>
-    <div class="img-cuore">
-      <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
-
+    <div class="parte-sx">
       <ul>
-        <li><h6 class="color-white">Sinister</h6></li>
-        <li><h6>Brano Nome</h6></li>
+        <li><img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt=""></li>
+        <li><p class="color-white">Sinister</p></li>
+        <li><p class="block">Brano Nome</p></li>
+      </ul>
+    </div>
+    <div class="parte-centrale">
+      <ul class="display-inline">
+        <li><i class="fas fa-random"></i></li>
+        <li><i class="far fa-caret-square-left"></i></li>
+        <li><i class="far fa-play-circle"></i></li>
+        <li><i class="far fa-caret-square-right"></i></li>
+        <li><i class="fas fa-undo-alt"></i></li>
+      </ul>
+    </div>
+    <div class="parte-dx">
+      <ul>
+        <li><i class="fas fa-bars"></i></li>
+        <li><i class="fas fa-tv"></i></li>
+        <li><i class="fas fa-volume-up"></i></li>
+        <li><hr></li>
       </ul>
     </div>
 
