da completare footer

--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@
 
   <footer>
     <div class="parte-sx">
+      <div class="imagine">
       <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+      </div>
+
       <div class="descrizione-canzone">
         <p class="color-white">Sinister</p>
         <p class="block"> <br>Brano Nome</p>
@@ -174,13 +177,16 @@
         <li><i class="far fa-caret-square-right"></i></li>
         <li><i class="fas fa-undo-alt"></i></li>
       </ul>
+      <div class="range">
+        <input type="range" name="" value="">
+      </div>
     </div>
     <div class="parte-dx">
       <ul>
         <li><i class="fas fa-bars"></i></li>
         <li><i class="fas fa-tv"></i></li>
         <li><i class="fas fa-volume-up"></i></li>
-        <li><hr></li>
+        <li><input type="range" name="" value=""></li>
       </ul>
     </div>
 
