--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
   <aside class="side-bar">
 
-       <img class="logo" src="./assets/img/logo.png" alt="logo-spotify">
-       <img class="display-none"src="https://images-na.ssl-images-amazon.com/images/I/71HBfXs9bsL._AC_SL1000_.jpg" alt="logo senza scritta">
+      <img class="logo" src="./assets/img/logo.png" alt="logo-spotify">
+      <div class="display-none">
+        <i class="fab fa-spotify"></i>
+      </div>
     <div class="content">
        <ul>
          <li class="border"><i class="fas fa-house-damage"></i><a href="#">Home</a></li>
@@ -56,7 +58,7 @@
 
   <main>
      <ul class="text-uppercase">
-       <li>in evidenza</li>
+       <li id="border-bottom">in evidenza</li>
        <li>podcast</li>
        <li>classifiche</li>
        <li>generi e mood</li>
@@ -67,86 +69,129 @@
     <h2 class="color-white">Recently played</h2>
 
     <div class="raccolta">
+    <div class="ragruppo">
       <div class="card special">
-        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <div class="album">
+          <img  src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+          <img  src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+          <img  src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+          <img  src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        </div>
+
         <div class="layover">
           <i class="far fa-play-circle"></i>
          </div>
+      </div>
         <h4 class="color-white">Hevil Metal</h4>
         <p class="color-grey">Subtitle</p>
-      </div>
+    </div>
 
+    <div class="ragruppo">
       <div class="card">
-        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <img src="./assets/img/stranger-things.jpg" alt="stranger things">
         <div class="layover">
           <i class="far fa-play-circle"></i>
          </div>
-        <h4 class="color-white">Hevil Metal</h4>
-        <p class="color-grey">Subtitle</p>
       </div>
+        <h4 class="color-white">Stranger Things , Vol.1 (a Netflix Original Series Soundtrack)</h4>
+        <p class="color-grey">Kyle Dixon & Michael Stein</p>
+    </div>
 
+    <div class="ragruppo">
       <div class="card">
-        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <img src="./assets/img/queit-place.jpeg" alt="" alt="queit place">
         <div class="layover">
           <i class="far fa-play-circle"></i>
         </div>
+      </div>
+        <h4 class="color-white">A queit place</h4>
+        <p class="color-grey">Subtitle</p>
+    </div>
 
-        <h4 class="color-white">Hevil Metal</h4>
-        <p class="color-grey">Subtitle</p>
-      </div>
+    <div class="ragruppo">
       <div class="card">
-        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <img src="./assets/img/split.jpg" alt="split">
         <div class="layover">
           <i class="far fa-play-circle"></i>
         </div>
-        <h4 class="color-white">Hevil Metal</h4>
-        <p class="color-grey">Subtitle</p>
       </div>
+        <h4 class="color-white">Split</h4>
+        <p class="color-grey">Subtitle</p>
+    </div>
+
+    <div class="ragruppo">
       <div class="card">
-        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="wellness">
         <div class="layover">
           <i class="far fa-play-circle"></i>
         </div>
+      </div>
         <h4 class="color-white">Hevil Metal</h4>
         <p class="color-grey">Subtitle</p>
-      </div>
+    </div>
+
+    <div class="ragruppo">
       <div class="card">
-        <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
+        <img src="./assets/img/sinister.jpg" alt="sinister">
         <div class="layover">
           <i class="far fa-play-circle"></i>
         </div>
-        <h4 class="color-white">Hevil Metal</h4>
-        <p class="color-grey">Subtitle</p>
       </div>
+        <h4 class="color-white">Sinister</h4>
+        <p class="color-grey">Subtitle</p>
+    </div>
     </div>
 
   <section class="created-for">
     <h2 class="color-white">Creato per John Doe</h2>
     <p class="color-grey">Più ascolti, più accurati saranno i suggerimenti.</p>
   <div class="raccolta">
+  <div class="ragruppo">
     <div class="card">
-      <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
-      <h4 class="color-white">Hevil Metal</h4>
+      <img src="./assets/img/realease-radar" alt="realease-radar">
+      <div class="layover">
+        <i class="far fa-play-circle"></i>
+      </div>
     </div>
+      <h4 class="color-white">Realease Radar</h4>
+  </div>
+
+  <div class="ragruppo">
     <div class="card">
-      <img src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
-      <h4 class="color-white">Hevil Metal</h4>
+      <img src="./assets/img/daily-mix.jpg" alt="daily-mix">
+      <div class="layover">
+        <i class="far fa-play-circle"></i>
+      </div>
     </div>
+      <h4 class="color-white">Daily Mix 1</h4>
+  </div>
   </div>
   </section>
 
   <section class="created-for">
     <h2 class="color-white mg-top">Artisti più popolari</h2>
     <p class="color-grey">Più ascolti, più accurati saranno i suggerimenti.</p>
+
   <div class="raccolta">
+  <div class="ragruppo">
     <div class="card">
       <img class="circle" src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
-      <h4 class="color-white">Hevil Metal</h4>
+      <div class="layover layover-circle">
+        <i class="far fa-play-circle"></i>
+      </div>
     </div>
+      <h4 class="color-white">Hevil Metal</h4>
+  </div>
+
+  <div class="ragruppo">
     <div class="card">
       <img class="circle" src="https://img.ibs.it/images/5051891142718_0_306_0_75.jpg" alt="">
-      <h4 class="color-white">Hevil Metal</h4>
+      <div class="layover layover-circle">
+        <i class="far fa-play-circle"></i>
+      </div>
     </div>
+      <h4 class="color-white">Hevil Metal</h4>
+  </div>
   </div>
   </section>
 
@@ -160,12 +205,12 @@
 
       <div class="descrizione-canzone">
         <p class="color-white">Sinister</p>
-        <p class="block"> <br>Brano Nome</p>
+        <p class="color-grey underline">Brano Nome</p>
       </div>
 
-      <ul class="nome-brano">
-        <li><i class="far fa-heart"></i></li>
-        <li><i class="far fa-folder"></i></li>
+      <ul class="preferiti">
+        <li><i class="far fa-heart color-grey"></i></li>
+        <li><i class="far fa-folder color-grey"></i></li>
       </ul>
     </div>
 
