--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
        <ul class="scompari">
          <li class="text-uppercase">playlist</li>
-         <li class="display-inline"><div class="square">+</div><spann class="playlist">Crea Playlist</span></li>
+         <li class="display-inline"><div class="square">+</div> <span class="playlist">Crea Playlist</span> </li>
        </ul>
 
        <ul class="categorie">
@@ -100,7 +100,7 @@
 
     <div class="ragruppo">
       <div class="card">
-        <img src="./assets/img/queit-place.jpeg" alt="" alt="queit place">
+        <img src="./assets/img/queit-place.jpeg" alt="queit place">
         <div class="layover">
           <i class="far fa-play-circle"></i>
         </div>
@@ -224,7 +224,7 @@
         <li><i class="fas fa-undo-alt"></i></li>
       </ul>
       <div class="range">
-        <input type="range" name="" value="">
+        <input type="range">
       </div>
     </div>
     <div class="parte-dx">
@@ -232,7 +232,7 @@
         <li><i class="fas fa-bars"></i></li>
         <li><i class="fas fa-tv"></i></li>
         <li><i class="fas fa-volume-up"></i></li>
-        <li><input type="range" name="" value=""></li>
+        <li><input type="range"></li>
       </ul>
     </div>
 
